--- a/src/index.css
+++ b/src/index.css
@@ -25,76 +25,77 @@ header, footer {
 }
 
 .grid{
-    display:grid;
-    gap: 10px;
-    grid-template-columns: repeat(3, 100px);
-    grid-auto-rows:minmax(100px);
-    width:min-content;
-    margin-left:auto;
-    margin-right:auto;
-    
-  }
-
-  .portrait {
-    border:3px ridge #A44200;
-    box-shadow: 0px 5px 10px;
-    overflow: hidden;
-    position:relative;
-    padding:0;
-    height:100px; 
-  }
-
-  .tint{
-    position:absolute;
-    width:100px;
-    height:100px;
-    opacity:0.5;
-    transition: opacity 0.5s;
-    background-color: rgb(0, 0, 0);
-  }
+  display:grid;
+  gap: 10px;
+  grid-template-columns: repeat(3, 100px);
+  grid-auto-rows:minmax(100px);
+  width:min-content;
+  margin-left:auto;
+  margin-right:auto;
   
-  .portrait-content img {
-    height:100px;
-    width:100px;
-    opacity:1;
-  }
-  
-  .tint:hover{
-    opacity:0;
-  }
+}
 
-  main {
-      max-height:70vw;
-      overflow-y:scroll;
-      text-align:center;
-  }
+.portrait {
+  border:3px ridge #A44200;
+  box-shadow: 0px 5px 10px;
+  overflow: hidden;
+  position:relative;
+  padding:0;
+  height:100px; 
+}
 
-  aside {
-      height:45%;
-      padding: 10px;
-      color:black;
-  }
+.tint{
+  position:absolute;
+  width:100px;
+  height:100px;
+  opacity:0.5;
+  transition: opacity 0.5s;
+  background-color: rgb(0, 0, 0);
+}
 
-  aside * {
-    margin: 0;
-  }
+.portrait-content img {
+  height:100px;
+  width:100px;
+  opacity:1;
+}
 
-  .infoPortrait{
-    border:10px ridge rgb(71, 46, 0);
-    display:block;
-    margin: 10px auto 0 auto;
-  }
+.tint:hover{
+  opacity:0;
+}
 
-  footer {
+main {
+    max-height:70vw;
+    overflow-y:scroll;
+    text-align:center;
+    padding:10px;
+}
+
+aside {
+    height:45%;
     padding: 10px;
-    text-align: center;
-  }
+    color:black;
+}
 
-  button{
-    font-family: inherit;
-    border:0;
-    height:auto;
-    width:100%;
-    background-color: #69140E;
-    color:white;
-  }
+aside * {
+  margin: 0;
+}
+
+.infoPortrait{
+  border:10px ridge rgb(71, 46, 0);
+  display:block;
+  margin: 10px auto 0 auto;
+}
+
+footer {
+  padding: 10px;
+  text-align: center;
+}
+
+button{
+  font-family: inherit;
+  border:0;
+  height:auto;
+  width:100%;
+  background-color: #69140E;
+  color:white;
+}
